PlayerPanel occlusion checks now occur any time a panel loses or acquires a card. Fixed an issue where the ShareKnowledge animation would look a bit wonky if either panel was collapsed when the animation began -- participating panels which are collapsed are now expanded before the animation begins.

--- a/style.css
+++ b/style.css
@@ -928,7 +928,7 @@ span.r {color: #ef282a; background: none}
 }
 .role
 {
-	line-height: 22px;
+	line-height: 24px;
 	border-top: 1px solid #fff;
 	border-bottom: 1px solid #fff;
 }
